<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp"
    android:layout_marginEnd="12dp">

    <ImageView
        android:id="@+id/productImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/product_image_cd"
        android:src="@drawable/yeezy_solid_grey" />

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_yeezy_name"
        android:textSize="@dimen/text_tiny"
        android:textColor="@color/dark_bg"
        android:layout_marginTop="@dimen/space_8" />

    <TextView
        android:id="@+id/productPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_yeezy_price"
        android:textSize="@dimen/text_tiny"
        android:textColor="@color/text_grey" />

</LinearLayout>