<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/light_bg"
    android:orientation="vertical"
    android:padding="24dp">

    <View
        android:layout_width="40dp"
        android:layout_height="4dp"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:background="@color/bottom_sheet_handle" />

    <TextView
        android:id="@+id/tvDetailsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/order_details_title"
        android:textColor="@color/dark_bg"
        android:textSize="20sp"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvOrderItemsHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:overScrollMode="never" />

    <TextView
        android:id="@+id/tvDetailsStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="6dp"
        android:text="@string/order_status_pending"
        android:textColor="@color/dark_bg"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvDetailsTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/order_total_price_placeholder"
        android:textColor="@color/dark_bg"
        android:textSize="16sp"
        android:textStyle="bold" />

</LinearLayout>